sysyruntimelibrary-master/functional_test/60_while_fibonacci.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/60_while_fibonacci.sy:23:13: error: syntax error, unexpected R_PARENTHESIS
23| 	n = getint()
  |              ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/60_while_fibonacci.sy:0:0: error: not find main function
